Fix links
fix links and css overlap issue

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -523,35 +523,32 @@ main figure  {
 
 /*profile photo size*/
 
-<style>
-    nav {
-        display: flex;
-        flex-direction: column;
-        align-items: center; 
-    }
+#account nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
 
-    .ProfilePhoto {
-        max-width: 25%;
-        min-width: 150px;
-        height: auto;
-        border: 5px solid orange;
-        margin-bottom: 1rem;
-    }
+#account .ProfilePhoto {
+    max-width: 25%;
+    min-width: 150px;
+    height: auto;
+    border: 5px solid orange;
+    margin-bottom: 1rem;
+}
 
-    figure {
-        margin-top: 1rem; 
-        text-align: center; 
-    }
+#account figure {
+    margin-top: 1rem; 
+    text-align: center; 
+}
 
-h1, h2 {
-        margin: .3rem; 
-    }
+#account h1, #account h2 {
+    margin: .3rem; 
+}
 
-h2 {
+#account h2 {
         line-height: 1.2; 
-    }
-</style>
-
+}
 
 /*media queries*/
 @media screen and (min-width: 600px) {
